# pystac-user

./: .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependabot.yml  doc.yml  pr.yml  release.yml
changelog/: index.html
search/: search_index.json
src/pystac_user/: __init__.py  exceptions.py  schema.py  stac_io.py  types.py  utils.py
tests/: test_pystac_user.py
tests/cassettes/: TestStacApiIO.test_stac_http_error.yaml  TestStacApiIO.test_stac_request_input.yaml  TestStacApiIO.test_stac_str_input.yaml  TestStaticAsyncIO.test_read_json.yaml  TestStaticAsyncIO.test_read_text.yaml  TestStaticAsyncIO.test_read_text_from_href_url_GET[None-None].yaml  TestStaticAsyncIO.test_read_text_from_href_url_GET[headers1-None].yaml  TestStaticAsyncIO.test_read_text_from_href_url_POST.yaml  TestStaticAsyncIO.test_static_text_from_href_url[None-None].yaml  TestStaticAsyncIO.test_static_text_from_href_url[headers1-None].yaml  TestStaticIO.test_read_json.yaml  TestStaticIO.test_read_stac_object.yaml  TestStaticIO.test_read_text_from_href_url[None-None].yaml  TestStaticIO.test_read_text_from_href_url[headers1-None].yaml  TestStaticIO.test_read_text_from_href_url_GET[None-None].yaml  TestStaticIO.test_read_text_from_href_url_GET[headers0-params0].yaml  TestStaticIO.test_read_text_from_href_url_GET[headers1-None].yaml  TestStaticIO.test_read_text_from_href_url_POST.yaml  test_api_stac_http_error.yaml  test_api_stac_request_input.yaml  test_api_stac_str_input.yaml  test_static_async_read_json.yaml  test_static_async_read_stac_object.yaml  test_static_async_read_text.yaml  test_static_async_read_text_from_href_url[None-None].yaml  test_static_async_read_text_from_href_url[headers1-None].yaml  test_static_read_stac_object.yaml  test_static_read_text_from_href_url[None-None].yaml  test_static_read_text_from_href_url[headers1-None].yaml
tests/data/: post_body.json
tests/data/test-case/: catalog.json
tests/data/test-case/country-1/: catalog.json
tests/data/test-case/country-1/area-1-1/: collection.json
tests/data/test-case/country-1/area-1-1/area-1-1-imagery/: area-1-1-imagery.json
tests/data/test-case/country-1/area-1-1/area-1-1-labels/: area-1-1-labels.json
tests/data/test-case/country-1/area-1-2/: collection.json
tests/data/test-case/country-1/area-1-2/area-1-2-imagery/: area-1-2-imagery.json
tests/data/test-case/country-1/area-1-2/area-1-2-labels/: area-1-2-labels.json
tests/data/test-case/country-2/: catalog.json
tests/data/test-case/country-2/area-2-1/: collection.json
tests/data/test-case/country-2/area-2-1/area-2-1-imagery/: area-2-1-imagery.json
tests/data/test-case/country-2/area-2-1/area-2-1-labels/: area-2-1-labels.json
tests/data/test-case/country-2/area-2-2/: collection.json
tests/data/test-case/country-2/area-2-2/area-2-2-imagery/: area-2-2-imagery.json
tests/data/test-case/country-2/area-2-2/area-2-2-labels/: area-2-2-labels.json
tests/pystac_user/: test_schema.py  test_stac_io.py  test_utils.py
